--- a/style.css
+++ b/style.css
@@ -2,14 +2,20 @@
 }
 
 .container {
-  display: flex;
+  display: block;
   justify-content: center;
 }
 .card {
-  background-color: blue;
+  background-color: white;
   width: 80vw;
   height: 80vh;
   display: block;
+}
+.form-group {
+  text-align: center;
+}
+.form-control {
+  width: 80vw;
 }
 .question-title {
   text-align: center;
