continued working on script.js

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   display: block;
   justify-content: center;
 }
+.container h1 {
+  text-align: center;
+}
 .card {
   background-color: white;
   width: 80vw;
@@ -13,6 +16,7 @@
 }
 .form-group {
   text-align: center;
+  margin-left: 10%;
 }
 .form-control {
   width: 80vw;
@@ -23,4 +27,7 @@
 }
 .questions {
   background-color: aqua;
+}
+.startBtn {
+  justify-content: center;
 }
